# Projekt2-TP

./: README.md
Projekt2TP/: CMakeLists.txt
Projekt2TP/include/: main.cpp  main.h  test.cpp
